Fix overflow

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,6 @@
 .app {
   background-color: #f3f3f3;
+  overflow-x: hidden;
 }
 
 .app__content {
